--- a/ema/test.ipynb
+++ b/ema/test.ipynb
@@ -81,8 +81,7 @@
     "    resources_to_activate = []\n",
     "    \n",
     "    \n",
-    "    ##TODO IMPLEMENT THE SURPLUS OF RESOURCE E\n",
-    "\n",
+    "    ##TODO IMPLEMENT THE special effects of everything\n",
     "    ## Assert whether at any turn we spent more than we have \n",
     "    for resource in resources_to_activate:\n",
     "        available_budget -= resource[\"Activation Cost\"]\n",
@@ -94,22 +93,32 @@
     "        if available_budget < 0:\n",
     "            print(\"Not enough budget\")\n",
     "            break\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    ## add the resources to the active resources\n",
     "    for resource in resources_to_activate:\n",
     "        active_resources.append(resource)\n",
     "        # available_resources.remove(resource)\n",
-    "    \n",
+    "    # print whether we have more building that we would obtain profit from or if there aren't enough buildings powered\n",
+    "    if sum([resource[\"Buildings Powered\"] for resource in active_resources]) > turns[turn][\"Maximum Buildings\"]:\n",
+    "            print(\"Too many buildings powered\")\n",
+    "\n",
+    "    if sum([resource[\"Buildings Powered\"] for resource in active_resources]) < turns[turn][\"Minimum Buildings\"]:\n",
+    "        profit = 0\n",
+    "        print(\"Not enough buildings powered\")\n",
+    "    else :\n",
+    "        #Calculate profit for each turn and then add it to the available budget\n",
+    "        profit = turns[turn][\"Profit\"] * min(sum([resource[\"Buildings Powered\"] for resource in active_resources]), turns[turn][\"Maximum Buildings\"])\n",
+    "        available_budget += profit\n",
+    "\n",
     "    ## Check inside the active resources if any of them expired\n",
     "    for resource in active_resources:\n",
     "        resource[\"Active Turns\"] -= 1\n",
     "        if resource[\"Active Turns\"] == 0:\n",
-    "            available_resources.append(resource)\n",
     "            active_resources.remove(resource)\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n"
+    "    # print the output in the format requested\n",
+    "    print(f\"{turn +1} {len(resources_to_activate)} {[resource['Resource ID'] for resource in active_resources]}\")\n"
    ]
   }
  ],
