logic for always resource A

--- a/ema/test.ipynb
+++ b/ema/test.ipynb
@@ -69,6 +69,153 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "class Resource:\n",
+    "\n",
+    "    current_active_turns = 0\n",
+    "    current_maintenance_turns = 0\n",
+    "    remaining_lyfecycles = 0\n",
+    "    # not in maintenance\n",
+    "    active = False\n",
+    "    # permanently dead\n",
+    "    dead = False\n",
+    "    \n",
+    "    def __init__(self, **kwargs):\n",
+    "        self.resource_id = kwargs[\"Resource ID\"]\n",
+    "        self.activation_cost = kwargs[\"Activation Cost\"]\n",
+    "        self.periodic_cost = kwargs[\"Periodic Cost\"]\n",
+    "        self.active_turns = kwargs[\"Active Turns\"]\n",
+    "        self.downtime_turns = kwargs[\"Downtime Turns\"]\n",
+    "        self.life_cycle = kwargs[\"Life Cycle\"]\n",
+    "        self.buildings_powered = kwargs[\"Buildings Powered\"]\n",
+    "        self.special_effect = kwargs[\"Special Effect\"]\n",
+    "        self.efficiency_rating = kwargs[\"Efficiency Rating\"]\n",
+    "\n",
+    "        self.current_active_turns = self.active_turns\n",
+    "        self.remaining_lyfecycles = self.life_cycle\n",
+    "    \n",
+    "    def update(self):\n",
+    "        if self.current_active_turns > 0:\n",
+    "            self.current_active_turns -= 1\n",
+    "            if self.current_active_turns == 0 and self.active:\n",
+    "                self.active = False\n",
+    "                self.current_maintenance_turns = self.downtime_turns\n",
+    "        elif self.current_maintenance_turns > 0:\n",
+    "            self.current_maintenance_turns -= 1\n",
+    "            if self.current_maintenance_turns == 0 and not self.active:\n",
+    "                if self.remaining_lyfecycles > 0:\n",
+    "                    self.active = True\n",
+    "                    self.current_active_turns = self.active_turns\n",
+    "                    self.remaining_lyfecycles -= 1\n",
+    "                else:\n",
+    "                    self.dead = True\n",
+    "class Game:\n",
+    "\n",
+    "    def __init__(self, D, R, T, resources, turns):\n",
+    "        self.D = D\n",
+    "        self.R = R\n",
+    "        self.T = T\n",
+    "        self.available_resources = [Resource(**resource) for resource in resources]\n",
+    "        self.turns = turns\n",
+    "        self.current_turn_id = 0\n",
+    "        self.current_budget = D\n",
+    "        self.current_resources = []\n",
+    "    \n",
+    "    def get_currently_active_buildings(self):\n",
+    "        return sum(resource.buildings_powered for resource in self.resources if resource.active)\n",
+    "    \n",
+    "    def perform_turn(self, bought_resources_list: list):\n",
+    "        # periodic costs\n",
+    "        for resource in self.current_resources:\n",
+    "            if resource.dead:\n",
+    "                self.current_resources.remove(resource)\n",
+    "                continue\n",
+    "            self.current_budget -= resource.periodic_cost\n",
+    "\n",
+    "        # update resources + activation costs\n",
+    "        for resource in bought_resources_list:\n",
+    "            self.current_budget -= resource.activation_cost\n",
+    "            resource.active = True\n",
+    "            resource.current_active_turns = resource.active_turns\n",
+    "            self.current_resources.append(resource)\n",
+    "        \n",
+    "        # add profits\n",
+    "        current_turn = self.turns[self.current_turn_id]\n",
+    "        max_buildings = current_turn[\"Maximum Buildings\"]\n",
+    "        min_buildings = current_turn[\"Minimum Buildings\"]\n",
+    "        profit = current_turn[\"Profit\"]\n",
+    "        if self.get_currently_active_buildings() >= min_buildings:\n",
+    "            self.current_budget += profit * min(max_buildings, self.get_currently_active_buildings())\n",
+    "        \n",
+    "        for resource in self.current_resources:\n",
+    "            resource.update()\n",
+    "        \n",
+    "        self.current_turn_id += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 8 1 1 1 1 1 1 1 1\n",
+      "1 5 1 1 1 1 1\n",
+      "2 0 \n",
+      "3 4 1 1 1 1\n",
+      "4 5 1 1 1 1 1\n",
+      "5 2 1 1\n",
+      "6 0 \n",
+      "7 7 1 1 1 1 1 1 1\n",
+      "8 3 1 1 1\n",
+      "9 1 1\n",
+      "10 5 1 1 1 1 1\n",
+      "11 3 1 1 1\n",
+      "12 3 1 1 1\n",
+      "13 3 1 1 1\n",
+      "14 1 1\n",
+      "15 6 1 1 1 1 1 1\n",
+      "16 3 1 1 1\n",
+      "17 2 1 1\n",
+      "18 1 1\n",
+      "19 6 1 1 1 1 1 1\n",
+      "20 0 \n",
+      "21 0 \n",
+      "22 9 1 1 1 1 1 1 1 1 1\n",
+      "23 2 1 1\n",
+      "24 0 \n",
+      "25 6 1 1 1 1 1 1\n",
+      "26 3 1 1 1\n",
+      "27 3 1 1 1\n",
+      "28 4 1 1 1 1\n",
+      "29 0 \n",
+      "30 2 1 1\n",
+      "31 7 1 1 1 1 1 1 1\n",
+      "32 1 1\n",
+      "33 0 \n",
+      "34 1 1\n",
+      "35 0 \n",
+      "36 0 \n",
+      "37 0 \n",
+      "38 0 \n",
+      "39 0 \n",
+      "40 0 \n",
+      "41 0 \n",
+      "42 0 \n",
+      "43 0 \n",
+      "44 0 \n",
+      "45 0 \n",
+      "46 0 \n",
+      "47 0 \n",
+      "48 0 \n",
+      "49 0 \n"
+     ]
+    }
+   ],
+   "source": [
     "## GAME SEQUENCE\n",
     "\n",
     "available_resources = resources.copy()\n",
@@ -77,21 +224,35 @@
     "\n",
     "for turn in range(T):\n",
     "    \n",
-    "\n",
     "    resources_to_activate = []\n",
+    "    total_buildings_powered = sum([r[\"Buildings Powered\"] for r in active_resources]) \n",
+    "    #Get Resource 0's details (Assuming Resource ID 0 is always available)\n",
+    "    resource_0 = next(res for res in resources if res[\"Special Effect\"] == 'A')\n",
+    "    # Calculate how many times we can afford to buy Resource 0 this turn\n",
+    "    max_affordable = available_budget // resource_0[\"Activation Cost\"]\n",
+    "    # Calculate how many we can buy without exceeding the max buildings powered\n",
+    "    max_allowed_by_buildings = (turns[turn][\"Maximum Buildings\"] - total_buildings_powered) // resource_0[\"Buildings Powered\"]\n",
+    "\n",
+    "\n",
+    "    # Final number of Resource 0 to buy\n",
+    "    num_to_buy = min(max_affordable, max_allowed_by_buildings)\n",
     "    \n",
+    "    # Buy and activate the resources\n",
+    "    for _ in range(num_to_buy):\n",
+    "        resources_to_activate.append(resource_0.copy())  # Copy to track its own lifecycle\n",
+    "\n",
     "    \n",
     "    ##TODO IMPLEMENT THE special effects of everything\n",
     "    ## Assert whether at any turn we spent more than we have \n",
     "    for resource in resources_to_activate:\n",
     "        available_budget -= resource[\"Activation Cost\"]\n",
     "        if available_budget < 0:\n",
-    "            print(\"Not enough budget\")\n",
+    "            # print(\"Not enough budget\")\n",
     "            break\n",
     "    for resource in active_resources:\n",
     "        available_budget -= resource[\"Periodic Cost\"]\n",
     "        if available_budget < 0:\n",
-    "            print(\"Not enough budget\")\n",
+    "            # print(\"Not enough budget\")\n",
     "            break\n",
     "    \n",
     "    \n",
@@ -101,11 +262,11 @@
     "        # available_resources.remove(resource)\n",
     "    # print whether we have more building that we would obtain profit from or if there aren't enough buildings powered\n",
     "    if sum([resource[\"Buildings Powered\"] for resource in active_resources]) > turns[turn][\"Maximum Buildings\"]:\n",
-    "            print(\"Too many buildings powered\")\n",
+    "        pass   # print(\"Too many buildings powered\")\n",
     "\n",
     "    if sum([resource[\"Buildings Powered\"] for resource in active_resources]) < turns[turn][\"Minimum Buildings\"]:\n",
     "        profit = 0\n",
-    "        print(\"Not enough buildings powered\")\n",
+    "        # print(\"Not enough buildings powered\")\n",
     "    else :\n",
     "        #Calculate profit for each turn and then add it to the available budget\n",
     "        profit = turns[turn][\"Profit\"] * min(sum([resource[\"Buildings Powered\"] for resource in active_resources]), turns[turn][\"Maximum Buildings\"])\n",
@@ -118,7 +279,7 @@
     "            active_resources.remove(resource)\n",
     "\n",
     "    # print the output in the format requested\n",
-    "    print(f\"{turn +1} {len(resources_to_activate)} {[resource['Resource ID'] for resource in active_resources]}\")\n"
+    "    print(f\"{turn} {len(resources_to_activate)} {' '.join(str(resource['Resource ID']) for resource in resources_to_activate)}\")\n"
    ]
   }
  ],
