--- a/sara/test.ipynb
+++ b/sara/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,208 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resources = [Resource(**r) for r in resources]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<game_logic.Resource at 0x293b9b26840>,\n",
+       " <game_logic.Resource at 0x293b9832870>,\n",
+       " <game_logic.Resource at 0x293b9bba930>,\n",
+       " <game_logic.Resource at 0x293b9b24e30>,\n",
+       " <game_logic.Resource at 0x293b9c333e0>,\n",
+       " <game_logic.Resource at 0x293b9c59fd0>,\n",
+       " <game_logic.Resource at 0x293b9c5af00>,\n",
+       " <game_logic.Resource at 0x293b9c5ae10>,\n",
+       " <game_logic.Resource at 0x293b9c5acf0>,\n",
+       " <game_logic.Resource at 0x293b9c5a030>,\n",
+       " <game_logic.Resource at 0x293b9c5ae70>,\n",
+       " <game_logic.Resource at 0x293b9c5a000>,\n",
+       " <game_logic.Resource at 0x293b9c5aea0>,\n",
+       " <game_logic.Resource at 0x293b9c5af30>,\n",
+       " <game_logic.Resource at 0x293b9c5af60>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define one int variable for each resource\n",
+    "x = [LpVariable(name=f\"x_{r.id}\", lowBound=0, cat=\"Integer\") for r in resources]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = LpProblem(name=\"pd\", sense=LpMaximize)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'RIr': 0,\n",
+       "  'RAr': 533,\n",
+       "  'RPr': 12,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 1,\n",
+       "  'RLr': 4,\n",
+       "  'RUr': 2,\n",
+       "  'RTr': 'X',\n",
+       "  'REr': None},\n",
+       " {'RIr': 1,\n",
+       "  'RAr': 12,\n",
+       "  'RPr': 7,\n",
+       "  'RWr': 3,\n",
+       "  'RMr': 2,\n",
+       "  'RLr': 10,\n",
+       "  'RUr': 1,\n",
+       "  'RTr': 'A',\n",
+       "  'REr': 2},\n",
+       " {'RIr': 2,\n",
+       "  'RAr': 89,\n",
+       "  'RPr': 36,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 0,\n",
+       "  'RLr': 2,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'E',\n",
+       "  'REr': 11},\n",
+       " {'RIr': 3,\n",
+       "  'RAr': 238,\n",
+       "  'RPr': 49,\n",
+       "  'RWr': 3,\n",
+       "  'RMr': 1,\n",
+       "  'RLr': 6,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'D',\n",
+       "  'REr': 10},\n",
+       " {'RIr': 4,\n",
+       "  'RAr': 36,\n",
+       "  'RPr': 5,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 0,\n",
+       "  'RLr': 6,\n",
+       "  'RUr': 1,\n",
+       "  'RTr': 'B',\n",
+       "  'REr': 7},\n",
+       " {'RIr': 5,\n",
+       "  'RAr': 81,\n",
+       "  'RPr': 12,\n",
+       "  'RWr': 2,\n",
+       "  'RMr': 0,\n",
+       "  'RLr': 4,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'E',\n",
+       "  'REr': 15},\n",
+       " {'RIr': 6,\n",
+       "  'RAr': 522,\n",
+       "  'RPr': 10,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 1,\n",
+       "  'RLr': 4,\n",
+       "  'RUr': 2,\n",
+       "  'RTr': 'X',\n",
+       "  'REr': None},\n",
+       " {'RIr': 7,\n",
+       "  'RAr': 188,\n",
+       "  'RPr': 25,\n",
+       "  'RWr': 3,\n",
+       "  'RMr': 1,\n",
+       "  'RLr': 9,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'D',\n",
+       "  'REr': 6},\n",
+       " {'RIr': 8,\n",
+       "  'RAr': 438,\n",
+       "  'RPr': 10,\n",
+       "  'RWr': 2,\n",
+       "  'RMr': 2,\n",
+       "  'RLr': 7,\n",
+       "  'RUr': 2,\n",
+       "  'RTr': 'X',\n",
+       "  'REr': None},\n",
+       " {'RIr': 9,\n",
+       "  'RAr': 521,\n",
+       "  'RPr': 11,\n",
+       "  'RWr': 3,\n",
+       "  'RMr': 2,\n",
+       "  'RLr': 5,\n",
+       "  'RUr': 2,\n",
+       "  'RTr': 'X',\n",
+       "  'REr': None},\n",
+       " {'RIr': 10,\n",
+       "  'RAr': 521,\n",
+       "  'RPr': 10,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 0,\n",
+       "  'RLr': 4,\n",
+       "  'RUr': 2,\n",
+       "  'RTr': 'X',\n",
+       "  'REr': None},\n",
+       " {'RIr': 11,\n",
+       "  'RAr': 89,\n",
+       "  'RPr': 51,\n",
+       "  'RWr': 3,\n",
+       "  'RMr': 2,\n",
+       "  'RLr': 8,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'D',\n",
+       "  'REr': 1},\n",
+       " {'RIr': 12,\n",
+       "  'RAr': 233,\n",
+       "  'RPr': 32,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 1,\n",
+       "  'RLr': 6,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'D',\n",
+       "  'REr': 7},\n",
+       " {'RIr': 13,\n",
+       "  'RAr': 150,\n",
+       "  'RPr': 14,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 0,\n",
+       "  'RLr': 3,\n",
+       "  'RUr': 0,\n",
+       "  'RTr': 'D',\n",
+       "  'REr': 20},\n",
+       " {'RIr': 14,\n",
+       "  'RAr': 417,\n",
+       "  'RPr': 5,\n",
+       "  'RWr': 1,\n",
+       "  'RMr': 2,\n",
+       "  'RLr': 8,\n",
+       "  'RUr': 1,\n",
+       "  'RTr': 'X',\n",
+       "  'REr': None}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
